// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RingDiagram > Snapshot Tests > should match snapshot with a selected point 1`] = `
<div
  class="flex justify-center items-center w-full"
>
  <div
    class="max-w-[800px] w-full text-gray-900 dark:text-gray-100"
  >
    <svg
      aria-label="Ring diagram showing points across different categories and rings"
      class="w-full h-auto"
      role="img"
      style="display: block;"
      viewBox="-187 -187 374 374"
    >
      <g>
        <circle
          fill="transparent"
          r="187"
          style="cursor: pointer;"
        />
        <circle
          fill="#3b82f6"
          fill-opacity="1"
          r="157.07999999999998"
          stroke="#60a5fa"
          stroke-width="1"
          style="cursor: pointer;"
        />
        <line
          stroke="#60a5fa"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="125.66399999999999"
          x2="157.07999999999998"
          y1="0"
          y2="0"
        />
        <line
          stroke="#60a5fa"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="7.694700768402649e-15"
          x2="9.61837596050331e-15"
          y1="125.66399999999999"
          y2="157.07999999999998"
        />
        <line
          stroke="#60a5fa"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="-125.66399999999999"
          x2="-157.07999999999998"
          y1="1.5389401536805298e-14"
          y2="1.923675192100662e-14"
        />
        <line
          stroke="#60a5fa"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="-2.3084102305207944e-14"
          x2="-2.885512788150993e-14"
          y1="-125.66399999999999"
          y2="-157.07999999999998"
        />
        <circle
          fill="#2563eb"
          fill-opacity="1"
          r="125.66399999999999"
          stroke="#3b82f6"
          stroke-width="1"
          style="cursor: pointer;"
        />
        <line
          stroke="#3b82f6"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="94.24799999999999"
          x2="125.66399999999999"
          y1="0"
          y2="0"
        />
        <line
          stroke="#3b82f6"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="5.771025576301987e-15"
          x2="7.694700768402649e-15"
          y1="94.24799999999999"
          y2="125.66399999999999"
        />
        <line
          stroke="#3b82f6"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="-94.24799999999999"
          x2="-125.66399999999999"
          y1="1.1542051152603974e-14"
          y2="1.5389401536805298e-14"
        />
        <line
          stroke="#3b82f6"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="-1.7313076728905958e-14"
          x2="-2.3084102305207944e-14"
          y1="-94.24799999999999"
          y2="-125.66399999999999"
        />
        <circle
          fill="#1d4ed8"
          fill-opacity="1"
          r="94.24799999999999"
          stroke="#2563eb"
          stroke-width="1"
          style="cursor: pointer;"
        />
        <line
          stroke="#2563eb"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="62.831999999999994"
          x2="94.24799999999999"
          y1="0"
          y2="0"
        />
        <line
          stroke="#2563eb"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="3.8473503842013245e-15"
          x2="5.771025576301987e-15"
          y1="62.831999999999994"
          y2="94.24799999999999"
        />
        <line
          stroke="#2563eb"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="-62.831999999999994"
          x2="-94.24799999999999"
          y1="7.694700768402649e-15"
          y2="1.1542051152603974e-14"
        />
        <line
          stroke="#2563eb"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="-1.1542051152603972e-14"
          x2="-1.7313076728905958e-14"
          y1="-62.831999999999994"
          y2="-94.24799999999999"
        />
        <circle
          fill="#1e40af"
          fill-opacity="1"
          r="62.831999999999994"
          stroke="#1d4ed8"
          stroke-width="1"
          style="cursor: pointer;"
        />
        <line
          stroke="#1d4ed8"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="31.415999999999997"
          x2="62.831999999999994"
          y1="0"
          y2="0"
        />
        <line
          stroke="#1d4ed8"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="1.9236751921006623e-15"
          x2="3.8473503842013245e-15"
          y1="31.415999999999997"
          y2="62.831999999999994"
        />
        <line
          stroke="#1d4ed8"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="-31.415999999999997"
          x2="-62.831999999999994"
          y1="3.8473503842013245e-15"
          y2="7.694700768402649e-15"
        />
        <line
          stroke="#1d4ed8"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="-5.771025576301986e-15"
          x2="-1.1542051152603972e-14"
          y1="-31.415999999999997"
          y2="-62.831999999999994"
        />
        <circle
          fill="#1e3a8a"
          fill-opacity="1"
          r="31.415999999999997"
          stroke="#1e40af"
          stroke-width="1"
          style="cursor: pointer;"
        />
        <line
          stroke="#1e40af"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="0"
          x2="31.415999999999997"
          y1="0"
          y2="0"
        />
        <line
          stroke="#1e40af"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="0"
          x2="1.9236751921006623e-15"
          y1="0"
          y2="31.415999999999997"
        />
        <line
          stroke="#1e40af"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="0"
          x2="-31.415999999999997"
          y1="0"
          y2="3.8473503842013245e-15"
        />
        <line
          stroke="#1e40af"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="0"
          x2="-5.771025576301986e-15"
          y1="0"
          y2="-31.415999999999997"
        />
        <text
          class="font-medium"
          dominant-baseline="middle"
          fill="currentColor"
          font-size="0.65rem"
          text-anchor="middle"
          x="125.21446881251383"
          y="-125.21446881251381"
        >
          Tec
        </text>
        <text
          class="font-medium"
          dominant-baseline="middle"
          fill="currentColor"
          font-size="0.65rem"
          text-anchor="middle"
          x="125.21446881251383"
          y="125.21446881251381"
        >
          Eco
        </text>
        <text
          class="font-medium"
          dominant-baseline="middle"
          fill="currentColor"
          font-size="0.65rem"
          text-anchor="middle"
          x="-125.21446881251381"
          y="125.21446881251383"
        >
          Pol
        </text>
        <text
          class="font-medium"
          dominant-baseline="middle"
          fill="currentColor"
          font-size="0.65rem"
          text-anchor="middle"
          x="-125.21446881251386"
          y="-125.21446881251381"
        >
          Soc
        </text>
        <circle
          class="point"
          cursor="pointer"
          cx="100"
          cy="50"
          data-point-id="1"
          fill="#f59e0b"
          opacity="1"
          r="7"
          stroke="var(--highlight)"
          stroke-width="2"
        >
          <title>
            Test Point 1
          </title>
        </circle>
        <circle
          cx="100"
          cy="50"
          fill="transparent"
          pointer-events="all"
          r="20"
          stroke="none"
          style="cursor: pointer;"
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`RingDiagram > Snapshot Tests > should match snapshot with a single point 1`] = `
<div
  class="flex justify-center items-center w-full"
>
  <div
    class="max-w-[800px] w-full text-gray-900 dark:text-gray-100"
  >
    <svg
      aria-label="Ring diagram showing points across different categories and rings"
      class="w-full h-auto"
      role="img"
      style="display: block;"
      viewBox="-187 -187 374 374"
    >
      <g>
        <circle
          fill="transparent"
          r="187"
          style="cursor: pointer;"
        />
        <circle
          fill="#3b82f6"
          fill-opacity="1"
          r="157.07999999999998"
          stroke="#60a5fa"
          stroke-width="1"
          style="cursor: pointer;"
        />
        <line
          stroke="#60a5fa"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="125.66399999999999"
          x2="157.07999999999998"
          y1="0"
          y2="0"
        />
        <line
          stroke="#60a5fa"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="7.694700768402649e-15"
          x2="9.61837596050331e-15"
          y1="125.66399999999999"
          y2="157.07999999999998"
        />
        <line
          stroke="#60a5fa"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="-125.66399999999999"
          x2="-157.07999999999998"
          y1="1.5389401536805298e-14"
          y2="1.923675192100662e-14"
        />
        <line
          stroke="#60a5fa"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="-2.3084102305207944e-14"
          x2="-2.885512788150993e-14"
          y1="-125.66399999999999"
          y2="-157.07999999999998"
        />
        <circle
          fill="#2563eb"
          fill-opacity="1"
          r="125.66399999999999"
          stroke="#3b82f6"
          stroke-width="1"
          style="cursor: pointer;"
        />
        <line
          stroke="#3b82f6"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="94.24799999999999"
          x2="125.66399999999999"
          y1="0"
          y2="0"
        />
        <line
          stroke="#3b82f6"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="5.771025576301987e-15"
          x2="7.694700768402649e-15"
          y1="94.24799999999999"
          y2="125.66399999999999"
        />
        <line
          stroke="#3b82f6"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="-94.24799999999999"
          x2="-125.66399999999999"
          y1="1.1542051152603974e-14"
          y2="1.5389401536805298e-14"
        />
        <line
          stroke="#3b82f6"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="-1.7313076728905958e-14"
          x2="-2.3084102305207944e-14"
          y1="-94.24799999999999"
          y2="-125.66399999999999"
        />
        <circle
          fill="#1d4ed8"
          fill-opacity="1"
          r="94.24799999999999"
          stroke="#2563eb"
          stroke-width="1"
          style="cursor: pointer;"
        />
        <line
          stroke="#2563eb"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="62.831999999999994"
          x2="94.24799999999999"
          y1="0"
          y2="0"
        />
        <line
          stroke="#2563eb"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="3.8473503842013245e-15"
          x2="5.771025576301987e-15"
          y1="62.831999999999994"
          y2="94.24799999999999"
        />
        <line
          stroke="#2563eb"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="-62.831999999999994"
          x2="-94.24799999999999"
          y1="7.694700768402649e-15"
          y2="1.1542051152603974e-14"
        />
        <line
          stroke="#2563eb"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="-1.1542051152603972e-14"
          x2="-1.7313076728905958e-14"
          y1="-62.831999999999994"
          y2="-94.24799999999999"
        />
        <circle
          fill="#1e40af"
          fill-opacity="1"
          r="62.831999999999994"
          stroke="#1d4ed8"
          stroke-width="1"
          style="cursor: pointer;"
        />
        <line
          stroke="#1d4ed8"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="31.415999999999997"
          x2="62.831999999999994"
          y1="0"
          y2="0"
        />
        <line
          stroke="#1d4ed8"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="1.9236751921006623e-15"
          x2="3.8473503842013245e-15"
          y1="31.415999999999997"
          y2="62.831999999999994"
        />
        <line
          stroke="#1d4ed8"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="-31.415999999999997"
          x2="-62.831999999999994"
          y1="3.8473503842013245e-15"
          y2="7.694700768402649e-15"
        />
        <line
          stroke="#1d4ed8"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="-5.771025576301986e-15"
          x2="-1.1542051152603972e-14"
          y1="-31.415999999999997"
          y2="-62.831999999999994"
        />
        <circle
          fill="#1e3a8a"
          fill-opacity="1"
          r="31.415999999999997"
          stroke="#1e40af"
          stroke-width="1"
          style="cursor: pointer;"
        />
        <line
          stroke="#1e40af"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="0"
          x2="31.415999999999997"
          y1="0"
          y2="0"
        />
        <line
          stroke="#1e40af"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="0"
          x2="1.9236751921006623e-15"
          y1="0"
          y2="31.415999999999997"
        />
        <line
          stroke="#1e40af"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="0"
          x2="-31.415999999999997"
          y1="0"
          y2="3.8473503842013245e-15"
        />
        <line
          stroke="#1e40af"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="0"
          x2="-5.771025576301986e-15"
          y1="0"
          y2="-31.415999999999997"
        />
        <text
          class="font-medium"
          dominant-baseline="middle"
          fill="currentColor"
          font-size="0.65rem"
          text-anchor="middle"
          x="125.21446881251383"
          y="-125.21446881251381"
        >
          Tec
        </text>
        <text
          class="font-medium"
          dominant-baseline="middle"
          fill="currentColor"
          font-size="0.65rem"
          text-anchor="middle"
          x="125.21446881251383"
          y="125.21446881251381"
        >
          Eco
        </text>
        <text
          class="font-medium"
          dominant-baseline="middle"
          fill="currentColor"
          font-size="0.65rem"
          text-anchor="middle"
          x="-125.21446881251381"
          y="125.21446881251383"
        >
          Pol
        </text>
        <text
          class="font-medium"
          dominant-baseline="middle"
          fill="currentColor"
          font-size="0.65rem"
          text-anchor="middle"
          x="-125.21446881251386"
          y="-125.21446881251381"
        >
          Soc
        </text>
        <circle
          class="point"
          cursor="pointer"
          cx="100"
          cy="50"
          data-point-id="1"
          fill="#f59e0b"
          opacity="1"
          r="7"
          stroke="none"
          stroke-width="2"
        >
          <title>
            Test Point 1
          </title>
        </circle>
        <circle
          cx="100"
          cy="50"
          fill="transparent"
          pointer-events="all"
          r="20"
          stroke="none"
          style="cursor: pointer;"
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`RingDiagram > Snapshot Tests > should match snapshot with no points 1`] = `
<div
  class="flex justify-center items-center w-full"
>
  <div
    class="max-w-[800px] w-full text-gray-900 dark:text-gray-100"
  >
    <svg
      aria-label="Ring diagram showing points across different categories and rings"
      class="w-full h-auto"
      role="img"
      style="display: block;"
      viewBox="-187 -187 374 374"
    >
      <g>
        <circle
          fill="transparent"
          r="187"
          style="cursor: pointer;"
        />
        <circle
          fill="#3b82f6"
          fill-opacity="1"
          r="157.07999999999998"
          stroke="#60a5fa"
          stroke-width="1"
          style="cursor: pointer;"
        />
        <line
          stroke="#60a5fa"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="125.66399999999999"
          x2="157.07999999999998"
          y1="0"
          y2="0"
        />
        <line
          stroke="#60a5fa"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="7.694700768402649e-15"
          x2="9.61837596050331e-15"
          y1="125.66399999999999"
          y2="157.07999999999998"
        />
        <line
          stroke="#60a5fa"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="-125.66399999999999"
          x2="-157.07999999999998"
          y1="1.5389401536805298e-14"
          y2="1.923675192100662e-14"
        />
        <line
          stroke="#60a5fa"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="-2.3084102305207944e-14"
          x2="-2.885512788150993e-14"
          y1="-125.66399999999999"
          y2="-157.07999999999998"
        />
        <circle
          fill="#2563eb"
          fill-opacity="1"
          r="125.66399999999999"
          stroke="#3b82f6"
          stroke-width="1"
          style="cursor: pointer;"
        />
        <line
          stroke="#3b82f6"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="94.24799999999999"
          x2="125.66399999999999"
          y1="0"
          y2="0"
        />
        <line
          stroke="#3b82f6"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="5.771025576301987e-15"
          x2="7.694700768402649e-15"
          y1="94.24799999999999"
          y2="125.66399999999999"
        />
        <line
          stroke="#3b82f6"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="-94.24799999999999"
          x2="-125.66399999999999"
          y1="1.1542051152603974e-14"
          y2="1.5389401536805298e-14"
        />
        <line
          stroke="#3b82f6"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="-1.7313076728905958e-14"
          x2="-2.3084102305207944e-14"
          y1="-94.24799999999999"
          y2="-125.66399999999999"
        />
        <circle
          fill="#1d4ed8"
          fill-opacity="1"
          r="94.24799999999999"
          stroke="#2563eb"
          stroke-width="1"
          style="cursor: pointer;"
        />
        <line
          stroke="#2563eb"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="62.831999999999994"
          x2="94.24799999999999"
          y1="0"
          y2="0"
        />
        <line
          stroke="#2563eb"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="3.8473503842013245e-15"
          x2="5.771025576301987e-15"
          y1="62.831999999999994"
          y2="94.24799999999999"
        />
        <line
          stroke="#2563eb"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="-62.831999999999994"
          x2="-94.24799999999999"
          y1="7.694700768402649e-15"
          y2="1.1542051152603974e-14"
        />
        <line
          stroke="#2563eb"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="-1.1542051152603972e-14"
          x2="-1.7313076728905958e-14"
          y1="-62.831999999999994"
          y2="-94.24799999999999"
        />
        <circle
          fill="#1e40af"
          fill-opacity="1"
          r="62.831999999999994"
          stroke="#1d4ed8"
          stroke-width="1"
          style="cursor: pointer;"
        />
        <line
          stroke="#1d4ed8"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="31.415999999999997"
          x2="62.831999999999994"
          y1="0"
          y2="0"
        />
        <line
          stroke="#1d4ed8"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="1.9236751921006623e-15"
          x2="3.8473503842013245e-15"
          y1="31.415999999999997"
          y2="62.831999999999994"
        />
        <line
          stroke="#1d4ed8"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="-31.415999999999997"
          x2="-62.831999999999994"
          y1="3.8473503842013245e-15"
          y2="7.694700768402649e-15"
        />
        <line
          stroke="#1d4ed8"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="-5.771025576301986e-15"
          x2="-1.1542051152603972e-14"
          y1="-31.415999999999997"
          y2="-62.831999999999994"
        />
        <circle
          fill="#1e3a8a"
          fill-opacity="1"
          r="31.415999999999997"
          stroke="#1e40af"
          stroke-width="1"
          style="cursor: pointer;"
        />
        <line
          stroke="#1e40af"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="0"
          x2="31.415999999999997"
          y1="0"
          y2="0"
        />
        <line
          stroke="#1e40af"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="0"
          x2="1.9236751921006623e-15"
          y1="0"
          y2="31.415999999999997"
        />
        <line
          stroke="#1e40af"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="0"
          x2="-31.415999999999997"
          y1="0"
          y2="3.8473503842013245e-15"
        />
        <line
          stroke="#1e40af"
          stroke-width="0.8"
          style="cursor: pointer;"
          x1="0"
          x2="-5.771025576301986e-15"
          y1="0"
          y2="-31.415999999999997"
        />
        <text
          class="font-medium"
          dominant-baseline="middle"
          fill="currentColor"
          font-size="0.65rem"
          text-anchor="middle"
          x="125.21446881251383"
          y="-125.21446881251381"
        >
          Tec
        </text>
        <text
          class="font-medium"
          dominant-baseline="middle"
          fill="currentColor"
          font-size="0.65rem"
          text-anchor="middle"
          x="125.21446881251383"
          y="125.21446881251381"
        >
          Eco
        </text>
        <text
          class="font-medium"
          dominant-baseline="middle"
          fill="currentColor"
          font-size="0.65rem"
          text-anchor="middle"
          x="-125.21446881251381"
          y="125.21446881251383"
        >
          Pol
        </text>
        <text
          class="font-medium"
          dominant-baseline="middle"
          fill="currentColor"
          font-size="0.65rem"
          text-anchor="middle"
          x="-125.21446881251386"
          y="-125.21446881251381"
        >
          Soc
        </text>
      </g>
    </svg>
  </div>
</div>
`;
